--- a/public/login.html
+++ b/public/login.html
@@ -9,12 +9,32 @@
           name="description"
           content="Web site created using create-react-app"
   />
-  <title>React Redux App</title>
+  <title>LogIn</title>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-<h1>Hola que tal</h1>
+<body class="m-0 vh-100 row justify-content-center align-items-center">
+
+<div class="col-auto p-5 text-center" >
+    <div class="mb-3 row">
+    <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+    <div>
+      <input type="email" class="form-control" id="inputEmail" placeholder="email@example.com">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+    <div>
+      <input type="password" class="form-control" id="inputPassword">
+    </div>
+  </div>
+  <button  type="submit" id="buttonLog" class="btn btn-primary">Login</button>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="login.js"> </script>
+
 </body>
 </html>
+
+
