--- a/public/plazoFijo/plazoFijo.html
+++ b/public/plazoFijo/plazoFijo.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="plazoFijo.css">
 </head>
 <body>
-  <h1>Sección de Plazo Fijo</h1>
+  <h1>Creacion de Plazo Fijo</h1>
   <form id="plazoFijoForm">
     <div>
       <label for="monto">Monto:</label>
