--- a/public/gastos/gastos.html
+++ b/public/gastos/gastos.html
@@ -10,11 +10,15 @@
   <form id="cargaPagosForm">
     <div>
       <label for="monto">Monto:</label>
-      <input type="number" id="monto" name="monto" min="0" step="0.01" required>
+      <input type="number" id="monto" name="monto" placeholder="$" min="0" step="0.01" required oninput="formatCurrency(this)">
     </div>
     <div>
       <label for="concepto">Concepto:</label>
       <input type="text" id="concepto" name="concepto" maxlength="100" required>
+    </div>
+    <div>
+      <label for="fecha">Fecha:</label>
+      <input type="date" id="fecha" name="fecha" required>
     </div>
     <button type="submit">Cargar Pago</button>
   </form>
