agregado logica js

--- a/public/gastos/gastos.html
+++ b/public/gastos/gastos.html
@@ -20,7 +20,7 @@
       <label for="fecha">Fecha:</label>
       <input type="date" id="fecha" name="fecha" required>
     </div>
-    <button type="submit">Cargar Pago</button>
+    <button type="submit" class="btn-register" id="btnSubmit"> Cargar Pago </button>
   </form>
 </body>
 </html>
