--- a/public/gastos/gastos.html
+++ b/public/gastos/gastos.html
@@ -10,17 +10,25 @@
   <form id="cargaPagosForm">
     <div>
       <label for="monto">Monto:</label>
-      <input type="number" id="monto" name="monto" placeholder="$" min="0" step="0.01" required oninput="formatCurrency(this)">
+      <input type="number" id="monto" name="amount" placeholder="$" min="0" step="0.01">
     </div>
     <div>
       <label for="concepto">Concepto:</label>
-      <input type="text" id="concepto" name="concepto" maxlength="100" required>
+      <input type="text" id="concepto" name="description" maxlength="100" required>
     </div>
     <div>
       <label for="fecha">Fecha:</label>
-      <input type="date" id="fecha" name="fecha" required>
+      <input type="date" id="date" name="fecha" required>
     </div>
     <button type="submit" class="btn-register" id="btnSubmit"> Cargar Pago </button>
   </form>
+  <div id="modalInfo" class="modal">
+    <div class="modal-content" id="modalContent">
+      <span class="close" id="closeModal">&times;</span>
+      <div id="content">
+    </div>
+  </div>
+</div>
+<script src="gastos.js"> </script>
 </body>
 </html>
